# Small-internal-domain-scraper

./: .gitignore  GDPR_PRIVACY_MEASURES.md  README.md  pyproject.toml  wesser_strl_scraper.py
config/sites/: cea_timetracking.json  wesser.json
src/internal_domain_scraper/: __init__.py  checkpoint.py  cli.py  config.py  excel_io.py  models.py  scraper.py
