[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "small-internal-domain-scraper"
version = "0.1.0"
description = "Local configurable scraper for internal domain field extraction."
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "playwright>=1.45.0"
]

[project.scripts]
internal-domain-scraper = "internal_domain_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
